Provide OpenAPI and drf-yasg pages

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ asn1crypto==0.24.0
 billiard==3.5.0.2
 celery==4.0.0
 cffi==1.11.5
+click==6.7
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==2.3
 Cython==0.24
 defusedxml==0.5.0
-Django==1.11.4
+Django==1.11.15
 django-autocomplete-light==3.1.6
 django-debug-toolbar==1.4
 django-extensions==1.6.7
@@ -16,19 +19,29 @@ django-taggit==0.19.1
 django-taggit-templatetags==0.2.5
 django-templatetag-sugar==1.0
 django-widget-tweaks==1.4.1
-djangorestframework==3.6.3
+djangorestframework==3.8.2
+drf-yasg==1.10.0
 elasticsearch==2.3.0
 enum34==1.1.6
+flex==6.13.2
 functools32==3.2.3.post2
+future==0.16.0
 idna==2.7
+inflection==0.3.1
 ipaddress==1.0.22
+itypes==1.1.0
+Jinja2==2.10
 jira==2.0.0
+jsonpointer==1.14
+jsonschema==2.6.0
 kombu==4.0.1
+MarkupSafe==1.0
 mod-wsgi==4.5.2
 model-mommy==1.2.6
 names==0.3.0
 numpy==1.11.0
 oauthlib==2.1.0
+openapi-codec==1.3.2
 pandas==0.18.1
 pbr==4.2.0
 psycopg2==2.6.1
@@ -40,9 +53,16 @@ PyYAML==3.12
 requests==2.10.0
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
+rfc3987==1.3.8
+ruamel.ordereddict==0.4.13
+ruamel.yaml==0.15.63
 six==1.10.0
 sqlparse==0.1.19
+strict-rfc3339==0.7
+swagger-spec-validator==2.4.0
+uritemplate==3.0.0
 urllib3==1.15.1
+validate-email==1.3
 vine==1.1.3
 virtualenv==15.0.3
 xlrd==1.0.0
