--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       image: docker_colossus
       stdin_open: true
       tty: true
-      command: ["python", "manage.py", "runserver", "8001"]
+      command: bash -c "python docker/wait.py && python manage.py makemigrations && python manage.py migrate && python manage.py createsuperuserargs --username simong --password pinchpinch --noinput --email 'simong@crab.com' && python manage.py runserver 0.0.0.0:80001"
       volumes:
         - .:/colossus
       ports:
