--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.1.3
 asn1crypto==0.24.0
+backports.shutil-get-terminal-size==1.0.0
 billiard==3.5.0.2
 celery==4.0.0
 cffi==1.11.5
@@ -8,18 +9,19 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.3
 Cython==0.24
+decorator==4.3.0
 defusedxml==0.5.0
 Django==1.11.15
 django-autocomplete-light==3.1.6
+django-crispy-forms==1.7.2
 django-debug-toolbar==1.4
-django-extensions==1.8.1
+django-extensions==1.6.7
 django-filter==1.0.4
-django-simple-history==1.8.1
+django-simple-history==2.7.0
 django-taggit==0.19.1
 django-taggit-templatetags==0.2.5
 django-templatetag-sugar==1.0
 django-widget-tweaks==1.4.1
-django-crispy-forms==1.7.2
 djangorestframework==3.8.2
 drf-yasg==1.10.0
 elasticsearch==2.3.0
@@ -30,6 +32,8 @@ future==0.16.0
 idna==2.7
 inflection==0.3.1
 ipaddress==1.0.22
+ipython==5.8.0
+ipython-genutils==0.2.0
 itypes==1.1.0
 Jinja2==2.10
 jira==2.0.0
@@ -44,9 +48,15 @@ numpy==1.11.0
 oauthlib==2.1.0
 openapi-codec==1.3.2
 pandas==0.18.1
+pathlib2==2.3.3
 pbr==4.2.0
-psycopg2==2.7.1
+pexpect==4.6.0
+pickleshare==0.7.5
+prompt-toolkit==1.0.15
+psycopg2==2.6.1
+ptyprocess==0.6.0
 pycparser==2.18
+Pygments==2.3.1
 PyJWT==1.6.4
 python-dateutil==2.5.3
 pytz==2016.4
@@ -57,14 +67,18 @@ requests-toolbelt==0.8.0
 rfc3987==1.3.8
 ruamel.ordereddict==0.4.13
 ruamel.yaml==0.15.63
+scandir==1.9.0
+simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.1.19
 strict-rfc3339==0.7
 swagger-spec-validator==2.4.0
+traitlets==4.3.2
 uritemplate==3.0.0
 urllib3==1.15.1
 validate-email==1.3
 vine==1.1.3
 virtualenv==15.0.3
+wcwidth==0.1.7
 xlrd==1.0.0
 XlsxWriter==0.9.3
