--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==2.1.3
+appnope==0.1.0
 asn1crypto==0.24.0
 backports.shutil-get-terminal-size==1.0.0
 billiard==3.5.0.2
@@ -8,14 +9,13 @@ click==6.7
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.3
-Cython==0.24
 decorator==4.3.0
 defusedxml==0.5.0
 Django==1.11.15
 django-autocomplete-light==3.1.6
 django-crispy-forms==1.7.2
 django-debug-toolbar==1.4
-django-extensions==1.6.7
+django-extensions==2.1.6
 django-filter==1.0.4
 django-simple-history==2.7.0
 django-taggit==0.19.1
@@ -45,7 +45,7 @@ names==0.3.0
 numpy==1.16.2
 oauthlib==2.1.0
 openapi-codec==1.3.2
-pandas==0.18.1
+pandas==0.24.2
 pathlib2==2.3.3
 pbr==4.2.0
 pexpect==4.6.0
@@ -54,8 +54,10 @@ prompt-toolkit==1.0.15
 psycopg2==2.7.7
 ptyprocess==0.6.0
 pycparser==2.18
+pydot==1.4.1
 Pygments==2.3.1
 PyJWT==1.6.4
+pyparsing==2.3.1
 python-dateutil==2.5.3
 pytz==2016.4
 PyYAML==3.12
@@ -63,6 +65,7 @@ requests==2.10.0
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
 rfc3987==1.3.8
+ruamel.yaml==0.15.89
 scandir==1.9.0
 simplegeneric==0.8.1
 six==1.10.0
