--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,160 @@
+adal==1.2.1
+aiohttp==3.6.2
 amqp==2.1.3
 appnope==0.1.0
 asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.3.0
+azure==4.0.0
+azure-applicationinsights==0.1.0
+azure-batch==4.1.3
+azure-common==1.1.18
+azure-core==1.12.0
+azure-cosmosdb-nspkg==2.0.2
+azure-cosmosdb-table==1.0.5
+azure-datalake-store==0.0.44
+azure-eventgrid==1.2.0
+azure-graphrbac==0.40.0
+azure-identity==1.5.0
+azure-keyvault==1.1.0
+azure-loganalytics==0.1.0
+azure-mgmt==4.0.0
+azure-mgmt-advisor==1.0.1
+azure-mgmt-applicationinsights==0.1.1
+azure-mgmt-authorization==0.50.0
+azure-mgmt-batch==5.0.1
+azure-mgmt-batchai==2.0.0
+azure-mgmt-billing==0.2.0
+azure-mgmt-cdn==3.1.0
+azure-mgmt-cognitiveservices==3.0.0
+azure-mgmt-commerce==1.0.1
+azure-mgmt-compute==4.4.0
+azure-mgmt-consumption==2.0.0
+azure-mgmt-containerinstance==1.4.0
+azure-mgmt-containerregistry==2.7.0
+azure-mgmt-containerservice==4.4.0
+azure-mgmt-cosmosdb==0.4.1
+azure-mgmt-datafactory==0.6.0
+azure-mgmt-datalake-analytics==0.6.0
+azure-mgmt-datalake-nspkg==3.0.1
+azure-mgmt-datalake-store==0.5.0
+azure-mgmt-datamigration==1.0.0
+azure-mgmt-devspaces==0.1.0
+azure-mgmt-devtestlabs==2.2.0
+azure-mgmt-dns==2.1.0
+azure-mgmt-eventgrid==1.0.0
+azure-mgmt-eventhub==2.4.0
+azure-mgmt-hanaonazure==0.1.1
+azure-mgmt-iotcentral==0.1.0
+azure-mgmt-iothub==0.5.0
+azure-mgmt-iothubprovisioningservices==0.2.0
+azure-mgmt-keyvault==1.1.0
+azure-mgmt-loganalytics==0.2.0
+azure-mgmt-logic==3.0.0
+azure-mgmt-machinelearningcompute==0.4.1
+azure-mgmt-managementgroups==0.1.0
+azure-mgmt-managementpartner==0.1.0
+azure-mgmt-maps==0.1.0
+azure-mgmt-marketplaceordering==0.1.0
+azure-mgmt-media==1.0.0
+azure-mgmt-monitor==0.5.2
+azure-mgmt-msi==0.2.0
+azure-mgmt-network==2.5.1
+azure-mgmt-notificationhubs==2.0.0
+azure-mgmt-nspkg==3.0.2
+azure-mgmt-policyinsights==0.1.0
+azure-mgmt-powerbiembedded==2.0.0
+azure-mgmt-rdbms==1.7.0
+azure-mgmt-recoveryservices==0.3.0
+azure-mgmt-recoveryservicesbackup==0.3.0
+azure-mgmt-redis==5.0.0
+azure-mgmt-relay==0.1.0
+azure-mgmt-reservations==0.2.1
+azure-mgmt-resource==2.1.0
+azure-mgmt-scheduler==2.0.0
+azure-mgmt-search==2.0.0
+azure-mgmt-servicebus==0.5.3
+azure-mgmt-servicefabric==0.2.0
+azure-mgmt-signalr==0.1.1
+azure-mgmt-sql==0.9.1
+azure-mgmt-storage==2.0.0
+azure-mgmt-subscription==0.2.0
+azure-mgmt-trafficmanager==0.50.0
+azure-mgmt-web==0.35.0
+azure-nspkg==3.0.2
+azure-servicebus==0.21.1
+azure-servicefabric==6.3.0.0
+azure-servicemanagement-legacy==0.20.6
+azure-storage-blob==1.5.0
+azure-storage-common==1.4.0
+azure-storage-file==1.4.0
+azure-storage-queue==1.4.0
 backports.shutil-get-terminal-size==1.0.0
 billiard==3.5.0.2
 celery==4.0.0
+certifi==2019.3.9
 cffi==1.11.5
+chardet==3.0.4
 click==6.7
 coreapi==2.3.3
+coreapi-cli==1.0.9
 coreschema==0.0.4
 cryptography==2.3
 decorator==4.3.0
 defusedxml==0.5.0
 Django==1.11.15
 django-autocomplete-light==3.1.6
+django-cors-headers==3.0.2
 django-crispy-forms==1.7.2
 django-debug-toolbar==1.4
 django-extensions==2.1.6
 django-filter==1.0.4
 django-simple-history==2.7.0
+django-storages==1.7.1
 django-taggit==0.19.1
 django-taggit-templatetags==0.2.5
 django-templatetag-sugar==1.0
 django-widget-tweaks==1.4.1
 djangorestframework==3.8.2
+djangorestframework-jwt==1.11.0
 drf-yasg==1.10.0
 elasticsearch==2.3.0
-enum34==1.1.6
+et-xmlfile==1.0.1
 flex==6.13.2
 future==0.16.0
 idna==2.7
+idna-ssl==1.1.0
 inflection==0.3.1
 ipaddress==1.0.22
 ipython==5.8.0
 ipython-genutils==0.2.0
+isodate==0.6.0
 itypes==1.1.0
+jdcal==1.4.1
 Jinja2==2.10
 jira==2.0.0
 jsonpointer==1.14
 jsonschema==2.6.0
 kombu==4.0.1
-MarkupSafe==1.0
 model-mommy==1.2.6
+msal==1.10.0
+msal-extensions==0.3.0
+msrest==0.6.21
+msrestazure==0.6.0
+multidict==4.7.5
 names==0.3.0
 numpy==1.16.2
 oauthlib==2.1.0
 openapi-codec==1.3.2
+openpyxl==3.0.0
 pandas==0.24.2
 pathlib2==2.3.3
 pbr==4.2.0
 pexpect==4.6.0
 pickleshare==0.7.5
+portalocker==1.7.1
 prompt-toolkit==1.0.15
-psycopg2==2.7.7
+psycopg2-binary==2.8.4
 ptyprocess==0.6.0
 pycparser==2.18
 pydot==1.4.1
@@ -61,23 +164,28 @@ pyparsing==2.3.1
 python-dateutil==2.5.3
 pytz==2016.4
 PyYAML==3.12
-requests==2.10.0
+requests==2.21.0
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
 rfc3987==1.3.8
 ruamel.yaml==0.15.89
 scandir==1.9.0
 simplegeneric==0.8.1
-six==1.10.0
+six==1.15.0
+slackclient==2.5.0
 sqlparse==0.1.19
 strict-rfc3339==0.7
 swagger-spec-validator==2.4.0
 traitlets==4.3.2
+typing-extensions==3.7.4.1
 uritemplate==3.0.0
-urllib3==1.15.1
+urllib3==1.24.1
 validate-email==1.3
 vine==1.1.3
 virtualenv==15.0.3
 wcwidth==0.1.7
 xlrd==1.0.0
 XlsxWriter==0.9.3
+yarl==1.4.2
+dj-static==0.0.6
+gunicorn==19.7.0
